fix: Update poster dimensions and RSVP link; correct venue name and footer details

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         }
 
         .poster {
-            max-height: 80%;
-            width: 50em;
+            max-width: 99%;
+            height: auto;
+            max-height: 50em;
             margin: 20px auto;
             border-radius: 16px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            display: block;
         }
 
         .rsvp-button {
@@ -75,15 +77,15 @@
 <body>
     <header>Beach Bash 40!</header>
     <h2>Join Binnard, Mieke & Laura to celebrate our 40th birthday in style!</h2>
-    <h3>Saturday 28th of June, 20h @ Bar Batard, Vilvoorde</h3>
+    <h3>Saturday 28th of June, 20h @ Bar Bâtard, Vilvoorde</h3>
     <div id="countdown"></div>
 
     <img src="poster.jpg" alt="Beach Party Poster" class="poster">
     <p>
-        <a href="https://forms.gle/your-placeholder-link" class="rsvp-button" target="_blank">RSVP Here</a>
+        <a href="https://forms.gle/mwVgAiLNn5QFHfBy9" class="rsvp-button" target="_blank">RSVP Here</a>
     </p>
     <footer>
-        Dress code: Beach Chic • Bring your good vibes 🌴🎉
+        Dress code: Beach Chic • Bring your good vibes 🌴🎉 • Adults only
     </footer>
 
     <script>
