feat: Add timetable and gift tips

--- a/index.html
+++ b/index.html
@@ -71,6 +71,37 @@
             font-size: 0.9rem;
             color: #555;
         }
+
+
+        .timetable,
+        .gifts {
+            margin: 40px auto;
+            max-width: 600px;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .timetable h3,
+        .gifts h3 {
+            font-family: 'Lobster', cursive;
+            color: #ff6347;
+            margin-bottom: 15px;
+        }
+
+        .timetable ul,
+        .gifts ul {
+            list-style: none;
+            padding: 0;
+            font-size: 1rem;
+        }
+
+        .timetable li,
+        .gifts li {
+            padding: 8px 0;
+            border-bottom: 1px solid #ddd;
+        }
     </style>
 </head>
 
@@ -81,6 +112,24 @@
     <div id="countdown"></div>
 
     <img src="poster.jpg" alt="Beach Party Poster" class="poster">
+    <div class="timetable">
+        <h3>Party Schedule 🎶</h3>
+        <ul>
+            <li>20:00 – Start with welcome cocktail!🍹</li>
+            <li>21:00 – Momma Bear 🎷🎸🎤</li>
+            <li>22:15 – Slettig & Vettig 🎧🎛️🔊</li>
+            <li>00:15 – Lisa 🎧🎛️🔊</li>
+            <li>01:15 – Steffi 🎧🎛️🔊</li>
+        </ul>
+    </div>
+    <div class="gifts">
+        <h3>Gift Tips 🎁</h3>
+        <ul>
+            <li><strong>Binnard</strong> – Vinyl records, OhGreen coupon (for a new BBQ♨️) </li>
+            <li><strong>Mieke</strong> – Kadonation deinge</li>
+            <li><strong>Laura</strong> – Skiing gear ofzow</li>
+        </ul>
+    </div>
     <p>
         <a href="https://forms.gle/mwVgAiLNn5QFHfBy9" class="rsvp-button" target="_blank">RSVP Here</a>
     </p>
