feat: Add correct gift tips

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <div class="gifts">
         <h3>Gift Tips 🎁</h3>
         <ul>
-            <li><strong>Binnard</strong> – Vinyl records, OhGreen coupon (for a new BBQ♨️) </li>
-            <li><strong>Mieke</strong> – Kadonation deinge</li>
-            <li><strong>Laura</strong> – Skiing gear ofzow</li>
+            <li><strong>Binnard</strong> – Vinyl records, Oh'Green coupon (for a new BBQ♨️) </li>
+            <li><strong>Mieke</strong> – https://app.kadonation.com/r/600040838🎁</li>
+            <li><strong>Laura</strong> – Bijdrage voor een skireis 🏂☃️🏔️</li>
         </ul>
     </div>
     <p>
