fix: Make Kadonation link a proper link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
         <h3>Gift Tips 🎁</h3>
         <ul>
             <li><strong>Binnard</strong> – Vinyl records, Oh'Green coupon (for a new BBQ♨️) </li>
-            <li><strong>Mieke</strong> – https://app.kadonation.com/r/600040838🎁</li>
+            <li><strong>Mieke</strong> – <a href="https://app.kadonation.com/r/600040838"
+                    target="_blank">Kadonation🎁</a></li>
             <li><strong>Laura</strong> – Bijdrage voor een skireis 🏂☃️🏔️</li>
         </ul>
     </div>
