feat: Add discogs and Untappd links

--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
     <div class="gifts">
         <h3>Gift Tips 🎁</h3>
         <ul>
-            <li><strong>Binnard</strong> – Vinyl records, Oh'Green coupon (for a new BBQ♨️) </li>
+            <li><strong>Binnard</strong> – <a href="https://www.discogs.com/wantlist?user=bennnnnnnn">Vinyl records</a>,
+                Oh'Green coupon (for a new BBQ♨️), some good new beers (<a
+                    href="https://untappd.com/user/ikdenkdusikben/beers">Untappd</a>)</li>
             <li><strong>Mieke</strong> – <a href="https://app.kadonation.com/r/600040838"
                     target="_blank">Kadonation🎁</a></li>
-            <li><strong>Laura</strong> – Bijdrage voor een skireis 🏂☃️🏔️</li>
+            <li><strong>Laura</strong> – Skiing trip contribution 🏂☃️🏔️</li>
         </ul>
     </div>
     <p>
